--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
 
           <div class="row">
             <div class="large-6 columns">
-              <label>Task Name</label>
-              <input type="text" placeholder="Change Order Reference">
+              <label>Change Order Reference</label>
+              <input type="text" placeholder="">
             </div>
               <div class="large-6 columns">
                 <label>Change Reason</label>
