changed CO and screenshot

--- a/index.html
+++ b/index.html
@@ -210,12 +210,32 @@
               </div>
           </div>
 
+<div class="row">
+            <div class="large-6 columns">
+              <label>Change Order Reference</label>
+              <input type="text" placeholder="">
+            </div>
+              <div class="large-6 columns">
+                <label>Change Reason</label>
+                <select class ="styled-select">
+                  <option label="Additional Work">Contact Difficulty</option>
+                  <option label="Contact Difficulty">Additional Work</option>
+                  <option label="Delayed Review">Delayed Review</option>
+                </select>
+              </div>
+          </div>
 
+<div class="row">
+            <div class="large-12 columns">
 
+              <button class="button radius" type="button">Add another Change Order</button>
+
+            </div>
+          </div>
           <div class="row">
             <div class="large-12 columns">
 
-              <button class="button radius" type="button"><img src="images/paperclip.png" alt=""> Attach Change Order</button>
+              <button class="button radius" type="button">Save</button>
 
             </div>
           </div>
