--- a/index.html
+++ b/index.html
@@ -200,9 +200,10 @@
                     <table>
                       <thead>
                         <tr>
-                          <th style="width:40%">Change Order Reference</th>
-                          <th style="width:40%">Change Reason</th>
-                          <th>Attach</th>
+                          <th style="width:20%">CO Reference</th>
+                          <th style="width:30%">Change Reason</th>
+                          <th style="width:20%">Attach</th>
+                          <th style="width:30%">File</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -218,7 +219,9 @@
                             </select>
                           </td>
                           <td><button type="button" class="button tiny">Attach</button></td>
+                          <td><code>CO_1501.doc</code></td>
                         </tr>
+
                         <tr>
                           <td><label></label><input type="text" placeholder=""></td>
                           <td>
@@ -230,6 +233,7 @@
                             </select>
                           </td>
                           <td><button type="button" class="button tiny">Attach</button></td>
+                          <td><code></code></td>
                         </tr>
                       </tbody>
                     </table>
